<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/back"
    android:orientation="vertical" >

    <include layout="@layout/page_head" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/editbox_background"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/gray18Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/register_0" />

            <EditText
                android:id="@+id/editname"
                style="@style/edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:background="@null"
                android:hint="@string/register_name"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:maxLines="1"
                android:textSize="16dp"
                android:width="190dip" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/gray18Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/register_1" />

            <EditText
                android:id="@+id/editeml"
                style="@style/edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:background="@null"
                android:hint="@string/register_eml"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="16dp"
                android:width="190dip" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/gray13Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dip"
        android:text="@string/register_4" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/gray18Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/register_2" />

            <EditText
                android:id="@+id/editpassw"
                style="@style/edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:background="@null"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:textSize="16dp"
                android:width="190dip" >
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/gray18Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/register_3" />

            <EditText
                android:id="@+id/editpassw2"
                style="@style/edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:background="@null"
                android:hint="@string/register_password2"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:textSize="16dp"
                android:width="190dip" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/gray13Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dip"
        android:text="@string/register_5" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:orientation="horizontal" >

        <TextView
            style="@style/gray18Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:text="@string/register_tips2" />

        <EditText
            android:id="@+id/editem_people"
            style="@style/edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:background="@null"
            android:hint="@string/register_tips3"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="16dp"
            android:width="190dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/register_flag"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/b_chech_1_1"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/show_context"
            android:textColor="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="同意《注册协议》" />
    </LinearLayout>

    <Button
        android:id="@+id/register"
        style="@style/white18Text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/new_btn_shape"
        android:padding="10dp"
        android:text="@string/register" />

</LinearLayout>