<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:background="@color/white"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/lhb_detail_Logs_shsj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/gray13Text"
            android:text="@string/lhb_detail_log_shsj"
            />


        <TextView
            android:id="@+id/lhb_detail_Logs_shje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/gray13Text"
            android:text="@string/lhb_detail_log_shje"
            />

        <TextView
            android:id="@+id/lhb_detail_Logs_zt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/gray13Text"
            android:text="@string/lhb_detail_log_status"
            />

        <TextView
            android:id="@+id/lhb_detail_Logs_bz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/gray13Text"
            android:text="@string/lhb_detail_log_reek"
            />




    </LinearLayout>
    <!--分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/back"/>


</LinearLayout>
