<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_margin="10dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <TextView
            style="@style/black18Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deal_1" />

        <TextView
            style="@style/black18Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/deal_2" />

        <TextView
            style="@style/black18Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/deal_3" />
    </RelativeLayout>
 
    <ListView
        android:cacheColorHint="#00000000"
        android:layout_below="@id/layout"
        android:layout_marginTop="1dip"
        android:id="@+id/listview" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
          >
    </ListView>

</RelativeLayout>