<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:orientation="vertical" >
        
        <include layout="@layout/page_head"/>
        
       
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"        
        android:background="@drawable/text_pay_bg"
        android:orientation="horizontal" >

        <TextView
            style="@style/black18Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/register_1"
            android:textColor="@color/new_black_color" />

        <EditText
            android:id="@+id/ed_bindemail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/black16Text"
            android:gravity="center_vertical"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:hint="@string/register_eml"
            android:singleLine="true" />
    </LinearLayout>

          <Button
              android:id="@+id/btn_sure"
              style="@style/white18Text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:padding="10dp"
              android:background="@drawable/new_btn_shape"
              android:text="@string/sure" />

</LinearLayout>
